Fixed minor graphical misalignment

--- a/Chasm.css
+++ b/Chasm.css
@@ -171,7 +171,7 @@ form {
 	padding: 0px 10px 0px 0px;
 
 	position: sticky;
-	top: 12px;
+	top: 10px;
 }
 
 #currency_box {
@@ -198,7 +198,7 @@ form {
 	padding: 0px 0px 0px 10px;
 
 	position: sticky;
-	top: 12px;
+	top: 10px;
 }
 
 #inspector_box {
